--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
-  {% if page.comments %}
+  {% if page.comments != false %}
   <div id="disqus_thread"></div>
   <script>
 	/**
